Docs: reframe repository as Tavall AI role layer